bootstrap/css/custom.css
html > body{
	margin: 0;
	padding: 0;
	
}

body {

	font-family: 'Montserrat', sans-serif;
	color:white;
	background-color: #282C30;
	width: 100vw;
	overflow: hidden;
	background-image: url('/images/stardust.png');
}
#wrapper {
	font-family: 'Montserrat', sans-serif;
	background-color: #282C30;
	background-image: url('/images/stardust.png');
	
}


footer{
	
	background-color: #282C30;
	height: 40px;
	

}
footer > p {
	padding-left: 4px;
	padding-top: 10px;
	float: left;
}
footer > a{
	float: right;
	padding: 4px;
}


#topBar{

	font-size: 6em;
	height:200px;
	
	background-color: #282C30;
}
#topBar > p {
	padding: 20px;
	margin-top: 20px;
}

#bottomMenu, #bottomMenu > img{

}
#bottomMenu2{

	
}
.cell2{
	height: 380px;
}
.cell2, .cell3{

	margin-top: 10%;
}
@media only screen and (max-width : 979px) {

}

/**/
.contain{
	top:50%;
	left:50%;
	height:54px;
	width:54px;
	position: relative;
	border-radius:40%;
	padding:2px;
	background-color: #DF4949;
}
.anim{
	-webkit-animation: myfirst 3s linear infinite;
  -moz-animation: myfirst 3s linear infinite;
	
	height:50px;
	width:50px;
	position: relative;
	border-radius:40%;
	background-color: #F28F79;
}
.p1{
	position:absolute;
	left:60%;
	top:45%;
	height:10px;
	width:10px;
	border-radius: 50%;
	background-color: #BFD1D9;
	-webkit-animation: numb2 3s linear infinite;
	-webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
   -moz-animation: numb2 3s linear infinite;
	-moz-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
}
.mouth{
	position:absolute;
	left:54%;
	top:50%;
	height:10px;
	width:20px;
	border-radius: 20px 0 0 20px;
	background-color: #8C354C;
	-webkit-animation: mouth 3s linear infinite;
  -moz-animation: mouth 3s linear infinite;
}
.eye1{
	position:absolute;
	left:30%;
	top:30%;
	height:2px;
	width:10px;
	border-radius: 2%;
	background-color: black;
	-webkit-animation: eye1 3s linear infinite;
  -moz-animation: eye1 3s linear infinite;
}
.eye2{
	position:absolute;
	left:78%;
	top:30%;
	height:2px;
	width:10px;
	border-radius: 2%;
	background-color: black;
	-webkit-animation: eye1 3s linear infinite;
  -moz-animation: eye1 3s linear infinite;
}
.nose{
	position:absolute;
	left:55%;
	top:30%;
	 width:0; 
     height:0; 
     border-bottom:6px solid #A6586D;
     border-left:4px solid transparent;
     border-right:4px solid transparent;
	-webkit-animation: nose 3s linear infinite;
	-webkit-box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
   animation: nose 3s linear infinite;
	-moz-box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
}
.hair{
	position:absolute;
	left:10%;
	top:-24%;
	 width:20px; 
     height:30px; 
    border-radius: 80px 0 0 8px;
    -webkit-transform:rotate(40deg);
  transform:rotate(40deg);
    background-color: #416275;
	-webkit-animation: hair 3s linear infinite;
	-webkit-box-shadow: 4px 5px 2px rgba(0, 0, 0, 0.2);
    	animation: hair 3s linear infinite;
	box-shadow: 4px 5px 2px rgba(0, 0, 0, 0.2);
}
.hair2{
	position:absolute;
	left:70%;
	top:-26%;
	 width:14px; 
     height:30px; 
    border-radius: 3px 0 0 30px;
    -webkit-transform:rotate(120deg);
  transform:rotate(120deg);
    background-color: #416275;
	-webkit-animation: hair 3s linear infinite;
	-webkit-box-shadow: 5px 0px 2px rgba(0, 0, 0, 0.1);
    animation: hair 3s linear infinite;
	box-shadow: 5px 0px 2px rgba(0, 0, 0, 0.1);
}
.hair3{
	position:absolute;
	
	
	 width:70px; 
     height:50px; 
   border-radius: 90px 90px 0 0;
   -webkit-transform:translate(-14%,20%);
   transform:translate(-14%,20%);
  -moz-transform:translate(-14%,20%);
  
    background-color: #334D5C;
	-webkit-animation: hair 3s linear infinite;
	-webkit-box-shadow: 4px 5px 2px rgba(0, 0, 0, 0.4);
    animation: hair 3s linear infinite;
	box-shadow: 4px 5px 2px rgba(0, 0, 0, 0.4);
}
/**/
@-webkit-keyframes numb2{
	0%{opacity: 0.0}
	10%{opacity: 0.0}
	20% {background-color: white;height: 8px; width: 8px;}
	30% {background-color: #BFD1D9;height: 8px; width:8px;opacity: 1;}
	40% {background-color: #BFD1D9; -webkit-transform:translateX(200%);transform:translateX(200%);opacity: 0 }
	60%,70%,80%,90%,100% {opacity: 0.0;}

}
@-webkit-keyframes mouth{
 0%{height:8px; width:12px;}
 10%{height:10px; width:10px;top:50%;}
 15%{height:2px; width:4px; }
 20%{height:2px; width:10px;}
 40%{top:42%;}
 to{height:8px; width:12px;}
}
@-webkit-keyframes eye1{
0%{top:30%;}
40%{top:22%;}
}
@-webkit-keyframes nose{
0%{top:30%;}
40%{top:22%;}
}
/*anim hair*/
@-webkit-keyframes hair{
	0%{top:-20%;}
	40%{top:-30%;}
	to{top:-20%;}
}
/*moz*/
@keyframes numb2{
	0%{opacity: 0.0}
	10%{opacity: 0.0}
	20% {background-color: white;height: 8px; width: 8px;}
	30% {background-color: #BFD1D9;height: 8px; width:8px;opacity: 1;}
	40% {background-color: #BFD1D9;transform:translateX(200%);opacity: 0 }
	60%,70%,80%,90%,100% {opacity: 0.0;}

}
@keyframes mouth{
 0%{height:8px; width:12px;}
 10%{height:10px; width:10px;top:50%;}
 15%{height:2px; width:4px; }
 20%{height:2px; width:10px;}
 40%{top:42%;}
 to{height:8px; width:12px;}
}
@keyframes eye1{
0%{top:30%;}
40%{top:22%;}
}
@keyframes nose{
0%{top:30%;}
40%{top:22%;}
}
/*anim hair*/
@keyframes hair{
	0%{top:-20%;}
	40%{top:-30%;}
	to{top:-20%;}
}

